k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: admin
  namespace: streaming-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: admin

  template:
    metadata:
      labels:
        app: admin

    spec:
      containers:
        - name: admin
          image: gaurydocker/streaming-admin:1.0.0

          ports:
            - containerPort: 3003
