k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth
  namespace: streaming-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth
          image: gaurydocker/streaming-auth:1.0.0

          ports:
            - containerPort: 3001
