k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chat
  namespace: streaming-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: chat

  template:
    metadata:
      labels:
        app: chat

    spec:
      containers:
        - name: chat
          image: gaurydocker/streaming-chat:1.0.0

          ports:
            - containerPort: 3004
