k8s/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: streaming
  namespace: streaming-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: streaming

  template:
    metadata:
      labels:
        app: streaming

    spec:
      containers:
        - name: streaming
          image: gaurydocker/streaming-stream:1.0.0

          ports:
            - containerPort: 3002
