k8s/admin-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: admin
  namespace: streaming-app

spec:
  selector:
    app: admin

  ports:
    - name: http
      port: 3003
      targetPort: 3003

  type: ClusterIP
