k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth
  namespace: streaming-app

spec:
  selector:
    app: auth

  ports:
    - name: http
      port: 3001
      targetPort: 3001

  type: ClusterIP
