k8s/chat-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chat
  namespace: streaming-app

spec:
  selector:
    app: chat

  ports:
    - name: http
      port: 3004
      targetPort: 3004

  type: ClusterIP
