k8s/streaming-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: streaming
  namespace: streaming-app

spec:
  selector:
    app: streaming

  ports:
    - name: http
      port: 3002
      targetPort: 3002

  type: ClusterIP
